# ffmpeg-samples

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/foretree/samples/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/foretree/samples/ffmpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/foretree/samples/ffmpeg/: ExampleUnitTest.kt
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/foretree/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: jx_ffmpeg_cmd_run.c
ffmpeg/src/main/cpp/jni/: jni_mp3_encode.cpp
ffmpeg/src/main/cpp/lame/: mp3_encoder.cpp  mp3_encoder.h
ffmpeg/src/main/java/com/foretree/ffmpeg/: FFmpegCmd.java  Mp3Encoder.kt
ffmpeg/src/test/java/com/foretree/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
